--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
+        "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "nexmo/laravel": "^2.4",
         "realrashid/sweet-alert": "^4.0",
+        "vonage/client": "^2.4",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
