--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "nexmo/client": "^2.4",
         "nexmo/laravel": "^2.4",
         "realrashid/sweet-alert": "^4.0",
         "vonage/client": "^2.4",
